--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -1,12 +1,3 @@
-<%= form_for(@playlist) do |f| %>
-  <%= f.text_field :name %>
-<h3>The checked songs are in the playlist:</h3>
-  <% @songs.each do |song| %>
-    <div>
-      <%= check_box_tag(:song_ids, song.id, song.playlists.find_by(name: @playlist.name), :name => 'playlist[song_ids][]', id: "song-#{song.id}") %>
-      <%= song.title %>
-    </div>
-  <% end %>
+<h1>Edit Playlist:</h1>
 
-  <%= f.submit %>
-  <% end %>
+<%= render partial: "form" %>
