--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,10 +1,3 @@
-<%= form_for(@artist) do |f| %>
+<h1>Edit Artist:</h1>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-
-  <%= f.label :image_path %>
-  <%= f.text_field :image_path %>
-
-  <%= f.submit %>
-<% end %>
+<%= render partial: "form" %>
