--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,11 +1,3 @@
-<%= form_for(@playlist) do |f| %>
-  <%= f.text_field :name %>
+<h1>New Playlist:</h1>
 
-  <% @songs.each do |song| %>
-    <div>
-      <%= check_box_tag(:song_ids, song.id, false, :name => 'playlist[song_ids][]', id: "song-#{song.id}") %>
-      <%= song.title %>
-    </div>
-  <% end %>
-    <%= f.submit %>
-<% end %>
+<%= render partial: "form" %>
